--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Bitter:wght@300&family=Oswald:wght@300&display=swap');
+
+* {
+    margin: 0;
+    border: none;
+    padding: 0;
+}
+
 body {
-    font-family: arial;
+    font-family: Oswald, sans-serif;
+    font-weight: 300;
 }
