--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,3 +25,28 @@ h1, h2 {
     font-size: 310%;
     margin-left: 30px;
 }
+
+#menu {
+    font-size: 110%;
+    letter-spacing: 4px;
+}
+
+#menu, #logo {
+    line-height: 75px;
+}
+
+
+#menu li {
+    float: right;
+    list-style-type: none;
+    margin-right: 15px;
+}
+
+#menu a {
+    text-decoration: none;
+    color: inherit;
+}
+
+#menu a:hover {
+    border-bottom: 1px solid #fafafa;
+}
