--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,3 +50,17 @@ h1, h2 {
 #menu a:hover {
     border-bottom: 1px solid #fafafa;
 }
+
+
+#hero-outer {
+    height: 800px;
+    width: 100%;
+    overflow: hidden;
+}
+
+#hero-image {
+    height: 800px;
+    width: 100%;
+    background: url('../images/Busby-babes-hero-image-3.jpeg') no-repeat center center;
+}
+
