--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,3 +64,27 @@ h1, h2 {
     background: url('../images/Busby-babes-hero-image-3.jpeg') no-repeat center center;
 }
 
+#overview {
+    height: 800px;
+}
+
+#left-overview {
+    padding-top: 30px;
+    width: 33%;
+    float: left;
+    background-color: blue;
+}
+
+
+#right-overview {
+    padding-top: 30px;
+    width: 33%;
+    float: right;
+    background-color: aquamarine;
+}
+
+#center-overview {
+    width: 33%;
+    margin: 0 auto;
+    background-color: chocolate;
+}
