--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,21 +73,20 @@ h1, h2 {
 
 #left-overview {
     padding-top: 30px;
-    width: 20%;
+    width: 25%;
     float: left;
 }
 
 
 #right-overview {
     padding-top: 30px;
-    width: 20%;
+    width: 25%;
     float: right;
 }
 
 #center-overview {
     width: 60%;
     margin: 0 auto;
-    background-color: chocolate;
 }
 
 hr {
@@ -122,6 +121,24 @@ hr {
 
 #about {
     text-align: center;
-    margin: 20px;
+    margin: 30px;
     font-size: 260%;
+}
+
+#container {
+    width: 600px;
+    height: 400px;
+    padding: 10px;
+    border-style: solid;
+    border-color: #ccc;
+    border-width: 1px;
+    margin: 0 auto;
+    margin-top: 100px;
+}
+
+#center-image-one {
+    background: url('../images/munich-plane-crash.webp') no-repeat center center;
+    height: 100%;
+    background-size: contain;
+
 }
