--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,7 +145,7 @@ hr {
 }
 
 footer {
-    height: 150px;
+    height: 80px;
 }
 
 .social-networks {
@@ -161,4 +161,9 @@ footer {
     margin: 1%;
     padding: 5%;
     color: #fafafa;
+}
+
+footer > div {
+    text-align: center;
+    margin-top: 35px;
 }
