--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,7 +137,7 @@ hr {
     margin-top: 100px;
 }
 
-#center-image-one {
+#center-image-overview {
     background: url('../images/munich-plane-crash.webp') no-repeat center center;
     height: 100%;
     background-size: contain;
@@ -166,4 +166,37 @@ footer {
 footer > div {
     text-align: center;
     margin-top: 35px;
+}
+
+@media screen and (max-width: 1200px) {
+    #overview {
+        width: 65%;
+        height: 1500px;
+        margin: 0 auto;
+    }
+
+    #about {
+        padding: 30px 0;
+        margin: 0;
+    }
+
+    #left-overview, #right-overview {
+        width: 100%;
+        float: left;
+        padding: 0;
+    }
+
+    #center-image-overview {
+        clear: both;
+        width: 100%;
+        float: left;
+        padding: 0;
+    }
+
+    #container {
+        clear: both;
+        width: 100%;
+        float: left;
+        padding: 0;
+    }
 }
