--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,8 @@ body {
     background-color: #232323;
     font-size: 1.25rem;
     line-height: 1.75rem;
+    max-width: 1800px;
+    margin: 0 auto;
 }
 
 h1, h2 {
@@ -51,10 +53,6 @@ h1, h2 {
 }
 
 #menu a:hover {
-    border-bottom: 1px solid #fafafa;
-}
-
-.active {
     border-bottom: 1px solid #fafafa;
 }
 
@@ -122,19 +120,20 @@ hr {
 
 #about {
     text-align: center;
-    margin: 30px;
+    margin: 50px;
     font-size: 3.25rem;
 }
 
 #container {
     width: 650px;
-    height: 750px;
+    height: 700px;
     padding: 10px;
     border-style: solid;
     border-color: #ccc;
     border-width: 1px;
     margin: 0 auto;
     margin-top: 120px;
+    margin-bottom: 90px;
 }
 
 #center-image-overview {
@@ -145,15 +144,44 @@ hr {
 }
 
 .form-section {
-    height: 600px;
+    height: 650px;
     text-align: center;
-    margin-top: 200px;
+    margin-top: 150px;
+    font-size: 1.75rem;
+    line-height: 3rem;
+}
+
+.form-section > p {
+    width: 80%;
+    margin: 0 auto;
+}
+
+.form-input {
+    margin-top: 100px;
     font-size: 2rem;
 }
 
+.text-input {
+    border: 1px solid #fafafa;
+    border-radius: 2px;
+    width: 15%;
+    height: 25px;
+    margin: 5px 0 15px;
+}
+
+.signup-button {
+    display: block;
+    color: #232323;
+    background-color: #fafafa;
+    text-align: center;
+    margin: 0 auto;
+    padding: 10px 25px 10px 25px;
+    margin-top: 15px;
+}
 
 footer {
     height: 80px;
+    line-height: 3rem;
 }
 
 .social-networks {
