--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,7 +92,7 @@ h1, h2 {
 
 hr {
     border-top: 1px solid #fafafa;
-    width: 98%;
+    width: 100%;
     margin: 5px;
 }
 
@@ -144,7 +144,7 @@ hr {
 }
 
 .form-section {
-    height: 650px;
+    height: 900px;
     text-align: center;
     margin-top: 100px;
     font-size: 1.75rem;
@@ -157,19 +157,28 @@ hr {
 }
 
 .form-input {
-    margin-top: 100px;
+    margin: 0 auto;
+    margin-top: 75px;
     font-size: 2rem;
+    border-radius: 5px;
+    border: 1px solid #fafafa;
+    padding: 20px;
+    display: inline-block;
+    box-sizing: border-box;
+    width: 50%;
+    padding: 12px 20px;
 }
 
 .text-input {
-    border: 1px solid #fafafa;
+  
     border-radius: 2px;
-    width: 15%;
+    width: 100%;
     height: 25px;
     margin: 5px 0 15px;
+    
 }
 
-.signup-button {
+#signup-button {
     display: block;
     color: #232323;
     background-color: #fafafa;
@@ -177,6 +186,10 @@ hr {
     margin: 0 auto;
     padding: 10px 25px 10px 25px;
     margin-top: 15px;
+}
+
+#signup-button:hover {
+    background-color: red;
 }
 
 footer {
