--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ body {
     max-width: 1800px;
     margin: 0 auto;
 }
-
+/* headings and logo */
 h1, h2 {
     font-family: Bitter, sans-serif;
     text-transform: uppercase;
@@ -30,6 +30,7 @@ h1, h2 {
     margin-left: 30px;
 }
 
+/* navagation links */
 #menu {
     font-size: 110%;
     letter-spacing: 4px;
@@ -56,6 +57,7 @@ h1, h2 {
     border-bottom: 1px solid #fafafa;
 }
 
+/* hero image */
 #hero-outer {
     height: 800px;
     width: 100%;
@@ -68,6 +70,7 @@ h1, h2 {
     background: url('../images/Busby-babes-hero-image-3.jpeg') no-repeat center center;
 }
 
+/* overview */
 #overview {
     height: 750px;
 }
@@ -77,7 +80,6 @@ h1, h2 {
     width: 25%;
     float: left;
 }
-
 
 #right-overview {
     padding-top: 30px;
@@ -124,6 +126,8 @@ hr {
     font-size: 3.25rem;
 }
 
+
+/* overview center image */
 #container {
     width: 650px;
     height: 700px;
@@ -143,6 +147,7 @@ hr {
     background-position-x: left;
 }
 
+/* form */
 .form-section {
     height: 900px;
     text-align: center;
@@ -192,6 +197,7 @@ hr {
     background-color: red;
 }
 
+/* footer */
 footer {
     height: 80px;
     line-height: 3rem;
@@ -217,16 +223,14 @@ footer > div {
     margin-top: 35px;
 }
 
+/* media queries */
+
+/* for larger to medium screens size from 1200px and down */
 @media screen and (max-width: 1200px) {
     #overview {
         width: 65%;
         height: 1500px;
         margin: 0 auto;
-    }
-
-    #about {
-        padding: 30px 0;
-        margin: 0;
     }
 
     #left-overview, #right-overview {
@@ -249,3 +253,4 @@ footer > div {
         padding: 0;
     }
 }
+
