--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -252,5 +252,12 @@ footer > div {
         float: left;
         padding: 0;
     }
+
+    #menu {
+        clear: both;
+        float: left;
+        margin-left: 30px;
+    }
 }
+
 
