Add styles to navagation for min-width 380px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -259,5 +259,14 @@ footer > div {
         margin-left: 30px;
     }
 }
+ 
+@media screen and (min-width: 380px) {
+    #menu {
+        clear: both;
+        float: left;
+        margin-left: 10px;
+    }
+}
+
 
 
