--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,7 @@ h1, h2 {
 #hero-image {
     height: 800px;
     width: 100%;
-    background: url('../images/Busby-babes-hero-image-3.jpeg') no-repeat center center;
+    background: url(../images/busby-babes-hero-image-3.jpeg) no-repeat center center;
 }
 
 /* overview */
