--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -227,7 +227,7 @@ footer > div {
 /* media queries */
 
 /* for larger to medium screens size from 1200px and down */
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1200px)  {
     #overview {
         width: 65%;
         height: 1500px;
@@ -258,6 +258,47 @@ footer > div {
         clear: both;
         float: left;
         margin-left: 30px;
+    }
+}
+
+ @media screen and (min-width: 320px) and (max-width: 480px) {
+    #logo {
+        font-size: 2rem;
+    }
+
+    #menu {
+        font-size: 0.75rem;
+        float: left;
+    }
+
+    #about {
+        font-size: 2rem;
+        float: left;
+        margin-top: 30px;
+    }
+
+    #overview {
+        font-size: 1rem;
+    }
+
+    #container {
+        width: 80%;
+        height: 200px;
+        margin-top: 20px;
+        clear: both;
+        float: left;
+        padding: 0;
+
+    }
+
+    #sign-up {
+        font-size: 1rem;
+        height: 1100px;
+    }
+
+    #form-input {
+        font-size: 0.5rem;
+        height: 100px;
     }
 }
  
