--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,10 +168,9 @@ h1, h2 {
     font-size: 2rem;
     border-radius: 5px;
     border: 1px solid #fafafa;
-    padding: 20px;
     display: inline-block;
     box-sizing: border-box;
-    width: 50%;
+    max-width: 600px;
     padding: 12px 20px;
 }
 
@@ -181,6 +180,7 @@ h1, h2 {
     width: 100%;
     height: 25px;
     margin: 5px 0 15px;
+    padding: 4px;
     
 }
 
