--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,47 +79,19 @@ h1, h2 {
 
 /* overview */
 #overview {
-    height: 650px;
+    height: 1500px;
 }
 
-#left-overview {
-    padding-top: 30px;
-    width: 25%;
-    float: left;
+
+.overview-main {
+    text-align: center;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    
+
 }
 
-#right-overview {
-    padding-top: 30px;
-    width: 25%;
-    float: right;
-}
-
-#center-overview {
-    width: 60%;
-    margin: 0 auto;
-}
-
-.left-overview-heading {
-    width: 90%;
-    float: right;
-    clear: both;
-    margin-bottom: 50px;
-}
-
-.right-overview-heading {
-    width: 90%;
-    float: left;
-    clear: both;
-    margin-bottom: 50px;
-}
-
-.right-overview-heading h2 {
-    text-align: right;
-}
-
-.right-overview-heading p {
-    text-align: right;
-}
 
 #about {
     text-align: center;
@@ -129,15 +101,21 @@ h1, h2 {
 
 
 /* overview center image */
+
+#center-overview {
+    width: 60%;
+    margin: 0 auto;
+}
+
 #container {
-    width: 650px;
-    height: 700px;
+    width: 100%;
+    height: 500px;
     padding: 10px;
     border-style: solid;
     border-color: #ccc;
     border-width: 1px;
     margin: 0 auto;
-    margin-top: 160px;
+    margin-top: 100px;
     margin-bottom: 90px;
 }
 
@@ -233,10 +211,11 @@ footer > div {
         margin: 0 auto;
     }
 
-    #left-overview, #right-overview {
+     #overview-content {
         width: 100%;
         float: left;
         padding: 0;
+        padding-bottom: 25px;
     }
 
     #center-image-overview {
