--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,16 +82,17 @@ h1, h2 {
     height: 1500px;
 }
 
-
 .overview-main {
     text-align: center;
     width: 80%;
     margin-left: auto;
     margin-right: auto;
-    
-
+    margin-bottom: 60px;
 }
 
+.overview-main > p {
+    margin-bottom: 30px;
+}
 
 #about {
     text-align: center;
@@ -115,8 +116,8 @@ h1, h2 {
     border-color: #ccc;
     border-width: 1px;
     margin: 0 auto;
-    margin-top: 100px;
-    margin-bottom: 90px;
+    margin-top: 20px;
+    margin-bottom: 50px;
 }
 
 #center-image-overview {
