--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,17 +84,23 @@ h1, h2 {
     width: 80%;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 20px;
+    margin-bottom: 100px;
+    font-size: 1.5rem;
 }
 
 .overview-main > p {
-    margin-bottom: 30px;
+    margin-bottom: 50px;
+    margin-top: 10px;
+}
+
+.overview-main > h3 {
+    font-size: 2rem;
 }
 
 #about {
     text-align: center;
     margin: 50px;
-    font-size: 3.25rem;
+    font-size: 3rem;
 }
 
 
