--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,13 +66,13 @@ h1, h2 {
 
 /* hero image */
 #hero-outer {
-    height: 800px;
+    height: 900px;
     width: 100%;
     overflow: hidden;
 }
 
 #hero-image {
-    height: 800px;
+    height: 900px;
     width: 100%;
     background: url(../images/busby-babes-hero-image-3.jpeg) no-repeat center center;
 }
@@ -136,6 +136,7 @@ h1, h2 {
     margin-top: 100px;
     font-size: 1.75rem;
     line-height: 3rem;
+    margin-bottom: 50px;
 }
 
 .form-section > p {
