--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -262,9 +262,11 @@ footer > div {
     }
 
     #menu {
-        font-size: 0.94rem;
-        float: left;
+        font-size: 0.9rem;
         display: inline-block;
+        margin-left: auto;
+        margin-right: auto;
+        padding-left: 7.5%;
     }
 
     #about {
